fix: hide the video element when a placeholder is visible (#1094)
Applies `display: none` to the `<video>` element when the participant's
video isn't playing and a placeholder is visible.
Enables building nicer user experience in designs that Video Placeholder
that utilize transparency.

Styling is done through `str-video__video--no-video` CSS selector that
allows an integrator to further customize the behavior and attach more
custom styles.

### Implementation notes
The `<video>` element needs to stay mounted as we need to be notified
about it's `play` or `pause` events that may occur in an uncontrolled
fashion in poor network conditions (e.g.: huge packet loss, the browser
may pause the video, and once the network is stable enough, will resume
playback).

--- a/packages/styling/src/Video/Video-layout.scss
+++ b/packages/styling/src/Video/Video-layout.scss
@@ -12,4 +12,8 @@
   &--mirror {
     transform: scaleX(-1);
   }
+
+  &--no-video {
+    display: none;
+  }
 }
